# checker-crc32-file

./: CMakeLists.txt
include/: async_task.hpp  base_task.hpp  checksum.hpp  exception.hpp  get_crc32.hpp  logger.hpp  thread_pool.hpp  thread_safe_map.hpp  thread_safe_queue.hpp
src/: checksum.cpp  logger.cpp  main.cpp  thread_pool.cpp  thread_safe_map.cpp
test/: test2.txt  test4.txt  test5.txt
